--- a/src/assets/scss/pages/_assetmanagement.scss
+++ b/src/assets/scss/pages/_assetmanagement.scss
@@ -58,10 +58,17 @@
 
 	.sect_1 {
 		position: relative;
-		margin-top: 100px;
-		@include is-sp {
-			margin-top: 105px;
+		margin-top: 0;
+		clip-path: polygon(0 10%, 100% 0, 100% 85%, 65% 100%, 13% 94%, 0 82%);
+
+		@include is-sp{
+			clip-path: polygon(0 7%, 100% 0, 100% 85%, 65% 89%, 13% 94%, 0 90%);
 		}
+		
+
+		// @include is-sp {
+		// 	margin-top: 105px;
+		// }
 
 		.l-wrap {
 			text-align: center;
@@ -71,11 +78,12 @@
 			position: absolute;
 			right: 7%;
 			top: -95px;
-			opacity: 0.1;
+			opacity: 1;
+
 			@include is-sp {
 				right: 3%;
 				width: 176px;
-				top: -80px;
+				top: -97px;
 			}
 		}
 
@@ -83,30 +91,55 @@
 			opacity: 0.1;
 		}
 
-		&::before {
-			content: "";
-			position: absolute;
-			width: 100%;
-			top: -95px;
-			height: 100px;
-			background: linear-gradient(to right, #003782, #0059b6);
-			clip-path: polygon(0 50%, 100% 0, 100% 100%, 0 100%);
+		// &::before {
+		// 	content: "";
+		// 	position: absolute;
+		// 	width: 100%;
+		// 	top: -95px;
+		// 	height: 100px;
+		// 	background: linear-gradient(to right, #003782, #0059b6);
+		// 	clip-path: polygon(0 50%, 100% 0, 100% 100%, 0 100%);
 
-			@include is-sp {
-				clip-path: polygon(0 30%, 100% 0, 100% 100%, 0 100%);
-			}
-		}
+		// 	@include is-sp {
+		// 		clip-path: polygon(0 30%, 100% 0, 100% 100%, 0 100%);
+		// 	}
+		// }
 
 		&__center {
-			padding: 100px 0 160px 0;
-			background: linear-gradient(to left, #0059c6, #000017);
+			padding: 175px 0 160px 0;
+			background: linear-gradient(to right, #000017, #0059c6);
+
+			&::before{
+				clip-path: polygon(50% -9%, 100% 0, 100% 18%, 66% 58%, 0% 33%, 0 0, 0 0);
+
+				@include is-sp{
+					clip-path: polygon(50% -9%, 100% 0, 100% 42%, 66% 58%, 0% 24%, 0 0, 0 0);
+					height: 31.3%;
+				}
+			}
 
 			@include is-max(750px) {
-				padding: 75px 0;
+				padding: 183px 0 117px 0;
 			}
 
 			@include is-between(750px, 767px) {
 				padding: 150px 0;
+			}
+
+			&::after {
+				content: "";
+				position: absolute;
+				width: 100%;
+				bottom: 0;
+				z-index: 150;
+				height: 120px;
+				background: linear-gradient(to right, #0059c4, #000017);
+				clip-path: polygon(100% 0%, 100% 57%, 77% 100%, 0 78%);
+				opacity: 0.4;
+				
+				@include is-sp{
+					clip-path: polygon(0 30%, 26% 15%, 100% 30%, 100% 66%, 15% 100%, 0 68%);
+				}
 			}
 		}
 
@@ -200,7 +233,7 @@
 		&__box-big {
 			position: absolute;
 			left: -6%;
-			top: 63px;
+			top: 76px;
 			width: 265px;
 			@include is-max(1000px) {
 				display: block;
@@ -229,11 +262,13 @@
 			position: absolute;
 			left: 46%;
 			top: 18px;
+			opacity: 0.4;
+
 			@include is-sp {
 				width: 164px;
-				top: 0;
+				top: -49px;
 				left: auto;
-				right: 0;
+				right: 12px;
 			}
 		}
 
@@ -241,6 +276,8 @@
 			position: absolute;
 			bottom: 11px;
 			margin-left: -60px;
+			opacity: 0.4;
+
 			@include is-sp {
 				display: none;
 			}
@@ -248,7 +285,7 @@
 
 		.c-buttonREP {
 			.txt {
-				color: #2589ce;
+				color: #0059b4;
 				letter-spacing: 0.2em;
 			}
 		}
@@ -257,19 +294,20 @@
 			content: "";
 			position: absolute;
 			width: 100%;
-			top: -59px;
-			height: 60px;
+			top: -151px;
+			height: 50%;
+			z-index: -150;
 			background: linear-gradient(
-				90deg,
-				rgba(0, 55, 130, 1) 0%,
-				rgba(0, 89, 182, 1) 100%
+			90deg,
+			rgba(0, 55, 130, 1) 0%,
+			rgba(0, 89, 182, 1) 100%
 			);
-			-webkit-clip-path: polygon(20% 95%, 100% 0, 100% 100%, 0 100%, 0 0);
-			clip-path: polygon(15% 90%, 100% 0, 100% 100%, 0 100%, 0 0);
-			@include is-sp {
-				top: -29px;
-				height: 30px;
-			}
+			// -webkit-clip-path: polygon(20% 95%, 100% 0, 100% 100%, 0 100%, 0 0);
+			// clip-path: polygon(15% 90%, 100% 0, 100% 100%, 0 100%, 0 0);
+			// // @include is-sp {
+			// 	top: -29px;
+			// 	height: 30px;
+			// }
 		}
 
 		&::after {
@@ -317,7 +355,9 @@
 			display: flex;
 			flex-wrap: wrap;
 			padding: 90px 0;
+			
 			@include is-max(750px) {
+				padding: 32px 0 90px 0;
 				flex-direction: column-reverse;
 			}
 
@@ -391,7 +431,7 @@
 					&_ttl {
 						font-family: century-gothic, sans-serif;
 						@include font-line(11, 22);
-						color: #2589ce;
+						color: #0059b4;
 						letter-spacing: 0.26em;
 						text-align: center;
 						font-weight: 700;
@@ -408,7 +448,7 @@
 						span {
 							margin-left: 10px;
 							font-weight: 700;
-							color: #2589ce;
+							color: #0059b4;
 							@include font-line(13, 26);
 							letter-spacing: 0.2em;
 						}
@@ -441,9 +481,13 @@
 		margin-bottom: 60px;
 		background-color: #fff;
 
+		@include is-sp{
+			margin-bottom: 30px;
+		}
+
 		.c-buttonREP {
 			.txt {
-				color: #2589ce;
+				color: #0059b4;
 				letter-spacing: 0.2em;
 			}
 		}
@@ -489,23 +533,23 @@
 			}
 		}
 
-		&::after {
-			content: "";
-			position: absolute;
-			width: 100%;
-			bottom: -61px;
-			height: 60px;
-			background: linear-gradient(to left, #0059c6, #000017);
-			-webkit-clip-path: polygon(20% 95%, 100% 0, 100% 100%, 0 100%, 0 0);
-			clip-path: polygon(20% 95%, 100% 0, 100% 100%, 0 100%, 0 0);
-			@include is-sp {
-				height: 30px;
-			}
-		}
+		// &::after {
+		// 	content: "";
+		// 	position: absolute;
+		// 	width: 100%;
+		// 	bottom: -61px;
+		// 	height: 60px;
+		// 	background: linear-gradient(to left, #0059c6, #000017);
+		// 	-webkit-clip-path: polygon(20% 95%, 100% 0, 100% 100%, 0 100%, 0 0);
+		// 	clip-path: polygon(20% 95%, 100% 0, 100% 100%, 0 100%, 0 0);
+		// 	@include is-sp {
+		// 		height: 30px;
+		// 	}
+		// }
 		.txt_ttl {
 			@include font-line(24, 30);
 			text-align: left;
-			color: #4688c8;
+			color: #0059b4;
 			font-family: yu-mincho-pr6n, sans-serif;
 			font-weight: 500;
 			letter-spacing: 0.15em;
@@ -522,7 +566,7 @@
 		}
 
 		&--top-realestate {
-			border-left: 3px solid #4688c8;
+			border-left: 3px solid #0059b4;
 			padding-left: 20px;
 			position: relative;
 
@@ -543,7 +587,7 @@
 		&__header {
 			@include font-line(26, 37);
 			text-align: left;
-			color: #4688c8;
+			color: #0059b4;
 			font-family: yu-mincho-pr6n, sans-serif;
 			font-weight: 500;
 			letter-spacing: 0.2em;
@@ -578,7 +622,8 @@
 			display: flex;
 			flex-wrap: wrap;
 			flex-direction: row-reverse;
-			padding-bottom: 100px;
+			padding-bottom: 40px;
+
 			@include is-max(1067px) {
 				align-items: flex-start;
 			}
@@ -610,7 +655,7 @@
 				.txt_ttl {
 					@include font-line(26, 30);
 					text-align: left;
-					color: #4688c8;
+					color: #0059b4;
 					font-family: yu-mincho-pr6n, sans-serif;
 					font-weight: 500;
 					letter-spacing: 0.15em;
@@ -656,7 +701,7 @@
 				&_ttl {
 					font-family: century-gothic, sans-serif;
 					@include font-line(11, 22);
-					color: #2589ce;
+					color: #0059b4;
 					letter-spacing: 0.26em;
 					text-align: center;
 					font-weight: 700;
@@ -678,7 +723,7 @@
 					span {
 						margin-left: 10px;
 						font-weight: 700;
-						color: #2589ce;
+						color: #0059b4;
 						@include font-line(13, 26);
 						letter-spacing: 0.2em;
 					}
@@ -708,17 +753,59 @@
 		&--clipbg {
 			background-color: #fff;
 		}
+		padding: 60px 0 18px 0;
+		clip-path: polygon(0 0, 14% 8%, 100% 0, 100% 100%, 87% 93%, 0 100%);
+
+		@include is-sp{
+			clip-path: polygon(0 0, 14% 2%, 100% 0, 100% 100%, 78% 98%, 0 100%);
+			margin-bottom: 30px;
+		}
+
+			&::before {
+				content: "";
+				position: absolute;
+				width: 86%;
+				top: 0;
+				right: 0;
+				z-index: 150;
+				height: 120px;
+				background: linear-gradient(to right, #0059c4, #000017);
+				clip-path: polygon(0 0, 100% 0, 100% 38%, 68% 99%, 0 49%);
+				opacity: 0.4;
+
+				@include is-sp {
+					clip-path: polygon(0 0, 100% 0, 100% 43%, 67% 60%, 0 18%);
+				}
+			}
+
+			&::after {
+				content: "";
+				position: absolute;
+				width: 89%;
+				bottom: 0;
+				z-index: 150;
+				height: 120px;
+				background: linear-gradient(to right, #0059c4, #000017);
+				clip-path: polygon(0 64%, 35% 0%, 98% 57%, 100% 100%, 0 100%);
+				opacity: 0.4;
+				
+				@include is-sp{
+					clip-path: polygon(0 35%, 37% 24%, 100% 96%, 100% 97%, 0% 101%, 0 68%);
+				}
+			}
+
 
 		&__box-big-new {
 			position: absolute;
 			left: 46%;
-			top: 5px;
-			opacity: 0.5;
+			top: 0;
+			opacity: 1;
+
 			@include is-sp {
 				width: 100px;
 				left: auto;
 				right: 7%;
-				top: 4%;
+				top: -4%;
 			}
 			.pc {
 				display: none;
@@ -736,27 +823,28 @@
 		&__box-big-new2 {
 			position: absolute;
 			left: 0;
-			bottom: 8%;
-			opacity: 0.5;
+			bottom: 14%;
+			opacity: 1;
+
 			@include is-sp {
 				display: none;
 			}
 		}
 
-		&::after {
-			content: "";
-			position: absolute;
-			width: 100%;
-			bottom: -59px;
-			height: 60px;
-			background: linear-gradient(to left, #0059c6, #000017);
-			-webkit-clip-path: polygon(0 0, 100% -25%, 100% 100%, 80% 5%, 0 100%);
-			clip-path: polygon(0 0, 100% -25%, 100% 100%, 80% 5%, 0 100%);
-			@include is-sp {
-				height: 30px;
-				bottom: -29px;
-			}
-		}
+		// &::after {
+		// 	content: "";
+		// 	position: absolute;
+		// 	width: 100%;
+		// 	bottom: -59px;
+		// 	height: 60px;
+		// 	background: linear-gradient(to left, #0059c6, #000017);
+		// 	-webkit-clip-path: polygon(0 0, 100% -25%, 100% 100%, 80% 5%, 0 100%);
+		// 	clip-path: polygon(0 0, 100% -25%, 100% 100%, 80% 5%, 0 100%);
+		// 	@include is-sp {
+		// 		height: 30px;
+		// 		bottom: -29px;
+		// 	}
+		// }
 
 		.txt_ttl {
 			@include font-line(24, 30);
@@ -781,10 +869,12 @@
 		&__inner-realestate {
 			display: flex;
 			flex-wrap: wrap;
-			padding: 90px 0;
+			padding: 79px 0 107px 0;
 			align-items: center;
+
 			@include is-max(750px) {
 				flex-direction: column-reverse;
+				padding: 25px 0 107px 0;
 			}
 
 			&--left,
@@ -850,7 +940,7 @@
 					&_ttl {
 						font-family: century-gothic, sans-serif;
 						@include font-line(11, 22);
-						color: #2589ce;
+						color: #0059b4;
 						letter-spacing: 0.26em;
 						text-align: center;
 						font-weight: 700;
@@ -867,7 +957,7 @@
 						span {
 							margin-left: 10px;
 							font-weight: 700;
-							color: #2589ce;
+							color: #0059b4;
 							@include font-line(13, 26);
 							letter-spacing: 0.2em;
 						}
@@ -906,7 +996,7 @@
 		.txt_ttl {
 			@include font-line(24, 30);
 			text-align: left;
-			color: #4688c8;
+			color: #0059b4;
 			font-family: yu-mincho-pr6n, sans-serif;
 			font-weight: 500;
 			letter-spacing: 0.15em;
@@ -1001,7 +1091,7 @@
 				.txt_ttl {
 					@include font-line(24, 30);
 					text-align: left;
-					color: #4688c8;
+					color: #0059b4;
 					font-family: yu-mincho-pr6n, sans-serif;
 					font-weight: 500;
 					letter-spacing: 0.15em;
@@ -1035,7 +1125,7 @@
 					&_ttl {
 						font-family: century-gothic, sans-serif;
 						@include font-line(11, 22);
-						color: #2589ce;
+						color: #0059b4;
 						letter-spacing: 0.26em;
 						text-align: center;
 						font-weight: 700;
@@ -1052,7 +1142,7 @@
 						span {
 							margin-left: 10px;
 							font-weight: 700;
-							color: #2589ce;
+							color: #0059b4;
 							@include font-line(13, 26);
 							letter-spacing: 0.2em;
 						}
@@ -1080,16 +1170,60 @@
 
 	.sect_7 {
 		position: relative;
-		margin-top: 60px;
+		margin-top: 0;
 		margin-bottom: 60px;
-		padding-top: 70px;
-		padding-bottom: 33px;
+		padding-top: 140px;
+		padding-bottom: 92px;
 		background: linear-gradient(to left, #0059c6, #000017);
+		clip-path: polygon(0 0, 14% 8%, 100% 0, 100% 100%, 87% 93%, 0 100%);
+
+		@include is-max(1071px){
+			clip-path: polygon(0 0, 14% 5.1%, 100% 0, 100% 100%, 87% 93%, 0 100%);
+		}
+
+		@include is-sp{
+			clip-path: polygon(0 0, 14% 2%, 100% 0, 100% 100%, 78% 98%, 0 100%);
+			margin-bottom: 30px;
+		}
+
+			&::before {
+				content: "";
+				position: absolute;
+				width: 86%;
+				top: 0;
+				right: 0;
+				z-index: 150;
+				height: 120px;
+				background: linear-gradient(to right, #0059c4, #000017);
+				clip-path: polygon(0 0, 100% 0, 100% 38%, 68% 100%, 0 56%);
+				opacity: 0.4;
+
+				@include is-sp {
+					clip-path: polygon(0 0, 100% 0, 100% 43%, 67% 60%, 0 18%);
+				}
+			}
+
+			&::after {
+				content: "";
+				position: absolute;
+				width: 87%;
+				bottom: 0;
+				z-index: -1;
+				height: 120px;
+				background: linear-gradient(to right, #0059c4, #000017);
+				clip-path: polygon(0 64%, 36% 0%, 100% 51%, 100% 100%, 0 100%);
+				opacity: 0.4;
+				
+				@include is-sp{
+					clip-path: polygon(0 35%, 37% 24%, 100% 91%, 100% 97%, 0% 101%, 0 68%);
+				}
+			}
+
 
 		.c-buttonREP {
 			margin-top: 0;
 			.txt {
-				color: #2589ce;
+				color: #0059b4;
 			}
 		}
 
@@ -1126,35 +1260,35 @@
 			// }
 		}
 
-		&::before {
-			content: " ";
-			position: absolute;
-			width: 100%;
-			top: -59px;
-			height: 60px;
-			background: linear-gradient(to left, #0059c6, #000017);
-			-webkit-clip-path: polygon(20% 95%, 100% 0, 100% 100%, 0 100%, 0 0);
-			clip-path: polygon(20% 95%, 100%, 100% 100%, 0 100%, 0 0);
-			@include is-sp {
-				top: -28px;
-				height: 30px;
-			}
-		}
+		// &::before {
+		// 	content: " ";
+		// 	position: absolute;
+		// 	width: 100%;
+		// 	top: -59px;
+		// 	height: 60px;
+		// 	background: linear-gradient(to left, #0059c6, #000017);
+		// 	-webkit-clip-path: polygon(20% 95%, 100% 0, 100% 100%, 0 100%, 0 0);
+		// 	clip-path: polygon(20% 95%, 100%, 100% 100%, 0 100%, 0 0);
+		// 	@include is-sp {
+		// 		top: -28px;
+		// 		height: 30px;
+		// 	}
+		// }
 
-		&::after {
-			content: " ";
-			position: absolute;
-			width: 100%;
-			bottom: -59px;
-			height: 60px;
-			background: linear-gradient(to left, #0059c6, #000017);
-			-webkit-clip-path: polygon(0 0, 100% -25%, 100% 100%, 80% 5%, 0 98%);
-			clip-path: polygon(0 0, 100% -25%, 100% 100%, 85% 5%, 0 98%);
-			@include is-sp {
-				height: 30px;
-				bottom: -28px;
-			}
-		}
+		// &::after {
+		// 	content: " ";
+		// 	position: absolute;
+		// 	width: 100%;
+		// 	bottom: -59px;
+		// 	height: 60px;
+		// 	background: linear-gradient(to left, #0059c6, #000017);
+		// 	-webkit-clip-path: polygon(0 0, 100% -25%, 100% 100%, 80% 5%, 0 98%);
+		// 	clip-path: polygon(0 0, 100% -25%, 100% 100%, 85% 5%, 0 98%);
+		// 	@include is-sp {
+		// 		height: 30px;
+		// 		bottom: -28px;
+		// 	}
+		// }
 
 		.l-wrap {
 			position: relative;
@@ -1223,13 +1357,13 @@
 		.card_ttl {
 			font-family: yu-gothic-pr6n, sans-serif;
 			@include font-line(14, 21);
-			color: #2589ce;
+			color: #0059b4;
 			font-weight: 700;
 			letter-spacing: 0.2em;
 			padding-bottom: 10px;
 			@include is-max(750px) {
 				@include font-line(14, 21);
-				color: #2589ce;
+				color: #0059b4;
 				font-weight: 700;
 				letter-spacing: 0.1em;
 			}
@@ -1345,7 +1479,7 @@
 
 		.c-buttonREP {
 			.txt {
-				color: #2589ce;
+				color: #0059b4;
 			}
 		}
 
@@ -1353,7 +1487,31 @@
 			position: absolute;
 			left: 57%;
 			top: -12%;
+
+			@include is-sp{
+				left: unset;
+				right: 20px;
+				width: 140px;
+				top: -86%;
+				display: none;
+			}
 		}
+
+		&__box-big-new1 {
+			position: absolute;
+			left: 57%;
+			top: -12%;
+			display: none;
+
+			@include is-sp{
+				display: block;
+				left: unset;
+				right: 20px;
+				width: 140px;
+				top: -60%;
+			}
+		}
+		
 		&__box-big-new2 {
 			position: absolute;
 			left: -4%;
@@ -1379,7 +1537,7 @@
 		}
 
 		&--top {
-			border-left: 3px solid #2589ce;
+			border-left: 3px solid #0059b4;
 			padding-left: 15px;
 			position: relative;
 		}
@@ -1401,7 +1559,7 @@
 		&__header {
 			@include font-line(26, 37);
 			text-align: left;
-			color: #2589ce;
+			color: #0059b4;
 			font-family: yu-mincho-pr6n, sans-serif;
 			font-weight: 500;
 			letter-spacing: 0.1em;
@@ -1465,7 +1623,7 @@
 		.qtext {
 			font-family: yu-gothic-pr6n, sans-serif;
 			@include font-line(16, 24);
-			color: #2589ce;
+			color: #0059b4;
 			letter-spacing: 0.2em;
 			text-align: left;
 			font-weight: 700;
@@ -1569,7 +1727,7 @@
 		&_ttl {
 			font-family: century-gothic, sans-serif;
 			@include font-line(11, 22);
-			color: #2584c9 !important;
+			color: #0059b4 !important;
 			letter-spacing: 0.26em;
 			text-align: center;
 			font-weight: 700;
@@ -1586,7 +1744,7 @@
 			text-align: left;
 			font-size: 13px !important;
 			line-height: 26px !important;
-			color: #2584c9 !important;
+			color: #0059b4 !important;
 			font-weight: 700;
 			text-indent: -27px;
 			margin-left: 27px;
@@ -1602,7 +1760,7 @@
 			// span {
 			// 	margin-left: 10px;
 			// 	font-weight: 700;
-			// 	color: #2589ce;
+			// 	color: #0059b4;
 			// 	@include font-line(13, 26);
 			// 	letter-spacing: 0.2em;
 
