update column page

--- a/src/assets/scss/object/component/_card.scss
+++ b/src/assets/scss/object/component/_card.scss
@@ -506,7 +506,7 @@
 			bottom: 2%;
 			right: 2%;
 			font-family: century-gothic, sans-serif;
-			background: #258acf;
+			background: #0059b4;
 			width: 62px;
 			height: 62px;
 			clip-path: polygon(100% 0, 0% 100%, 100% 100%);
@@ -558,7 +558,7 @@
 			font-weight: 700;
 			font-family: yu-gothic-pr6n, sans-serif;
 			letter-spacing: 0.2em;
-			color: #258acf;
+			color: #0059b4;
 
 			@include is-max(430px) {
 				font-size: 3vw;
