--- a/src/assets/scss/pages/_top-page.scss
+++ b/src/assets/scss/pages/_top-page.scss
@@ -111,7 +111,7 @@
 				}
 			}
 			&-sub {
-				font-family: yu-mincho-pr6n, sans-serif;
+				font-family: YakuHanJP, yu-mincho-pr6n, sans-serif;
 
 				&-txt {
 					@include font-line(30, 48);
@@ -123,18 +123,20 @@
 						@include font-line(25, 36);
 						letter-spacing: 0.2em;
 						margin-bottom: 17px;
+						margin-top: 35px;
 					}
 				}
 			}
 
 			&-desc {
-				font-family: yu-gothic-pr6n, sans-serif;
+				font-family: YakuHanJP, yu-gothic-pr6n, sans-serif;
 
 				&-txt {
 					@include font-line(13, 26);
 					font-weight: 500;
 					color: #fff;
 					letter-spacing: 0.2em;
+					padding-top: 10px;
 
 					@include is-sp {
 						@include font-line(13.5, 20);
@@ -354,7 +356,7 @@
 						}
 
 						&-03 {
-							font-family: yu-gothic-pr6n, sans-serif;
+							font-family: YakuHanJP, yu-gothic-pr6n, sans-serif;
 							@include font-line(13, 26);
 							font-weight: 500;
 							letter-spacing: 0.2em;
@@ -385,8 +387,9 @@
 		}
 		.bg_1 {
 			position: absolute;
-			top: -14%;
-			right: 8%;
+			top: -11%;
+			right: -2%;
+			width: 352px;
 
 			@include is-sp {
 				display: none;
@@ -395,8 +398,8 @@
 
 		.bg_2 {
 			position: absolute;
-			left: -6%;
-			top: 9%;
+			left: -5.6%;
+			top: 7%;
 			z-index: -1;
 			opacity: 0.3;
 
@@ -655,7 +658,7 @@
 				}
 
 				&-01 {
-					width: 489px;
+					width: 495px;
 
 					@include is-max(1015px) {
 						padding-right: 20px;
@@ -699,7 +702,7 @@
 						}
 
 						&-03 {
-							font-family: yu-gothic-pr6n, sans-serif;
+							font-family: YakuHanJP, yu-gothic-pr6n, sans-serif;
 							@include font-line(13, 26);
 							font-weight: 500;
 							letter-spacing: 0.2em;
@@ -764,13 +767,13 @@
 		}
 		.bg_6 {
 			position: absolute;
-			right: 0;
+			right: 0%;
 			bottom: -10%;
 
 			@include is-sp {
 				position: absolute;
-				right: 3%;
-				top: 3%;
+				right: 1%;
+				top: 3.5%;
 				width: 163px;
 				z-index: -1;
 			}
@@ -1383,7 +1386,7 @@
 						}
 
 						&-03 {
-							font-family: yu-gothic-pr6n, sans-serif;
+							font-family: YakuHanJP, yu-gothic-pr6n, sans-serif;
 							@include font-line(13, 26);
 							font-weight: 500;
 							letter-spacing: 0.2em;
@@ -1571,8 +1574,9 @@
 
 				&-ttl {
 					font-family: century-gothic, sans-serif;
-					@include font-line(10, 20);
+					@include font-line(10);
 					letter-spacing: 0.32em;
+					line-height: 1;
 					color: #95c6e7;
 					padding-bottom: 10px;
 
@@ -1582,9 +1586,11 @@
 					}
 				}
 				&-sub {
-					font-family: yu-mincho-pr6n, sans-serif;
-					@include font-line(26, 37);
-					letter-spacing: 0.34;
+					font-family: YakuHanJP, yu-mincho-pr6n, sans-serif;
+					@include font-line(26);
+					line-height: 1;
+					letter-spacing: 0.34em;
+					padding-top: 21px;
 					padding-bottom: 10px;
 
 					@include is-sp {
@@ -1599,7 +1605,7 @@
 				}
 
 				&-desc {
-					font-family: yu-gothic-pr6n, sans-serif;
+					font-family: YakuHanJP, yu-gothic-pr6n, sans-serif;
 					font-weight: 500;
 
 					@include font-line(13, 26);
@@ -2020,14 +2026,14 @@
 
 		.bg_11 {
 			position: absolute;
-			top: 8.5%;
+			top: 75px;
 			right: 32%;
 			z-index: -4;
 			opacity: 0.3;
 
 			@include is-sp {
 				position: absolute;
-				top: 1.5%;
+				top: 1%;
 				right: 2%;
 				z-index: -4;
 				width: 176px;
@@ -2041,7 +2047,7 @@
 		}
 		.bg_10 {
 			position: absolute;
-			top: 53%;
+			top: 53.5%;
 			left: 0%;
 			z-index: -4;
 			opacity: 0.3;
@@ -2143,7 +2149,7 @@
 						font-family: yu-gothic-pr6n, sans-serif;
 						padding-top: 4px;
 						// padding-right: 111px;
-						width: 230px;
+						width: 250px;
 						color: #0059b2;
 
 						@include is-sp {
@@ -2166,7 +2172,7 @@
 					}
 
 					&-txt {
-						font-family: yu-gothic-pr6n, sans-serif;
+						font-family: YakuHanJP, yu-gothic-pr6n, sans-serif;
 						color: #333;
 						width: 770px;
 
@@ -2175,8 +2181,7 @@
 							width: 100%;
 						}
 						p {
-							font-size: 12px;
-							line-height: 26px;
+							@include font-line(12, 26);
 							font-weight: 500;
 							letter-spacing: 0.22em;
 
@@ -2206,7 +2211,11 @@
 			z-index: -1;
 
 			@include is-sp {
-				display: none;
+				display: block;
+				width: 122px;
+				right: 5%;
+				top: 3%;
+				transform: scaleY(-1) rotate(8deg);
 			}
 		}
 		.bg_13 {
@@ -2221,7 +2230,7 @@
 		}
 		.bg_14 {
 			position: absolute;
-			bottom: 33%;
+			bottom: 23.5%;
 			right: 0%;
 			z-index: -1;
 
