--- a/src/assets/scss/object/project/_addons.scss
+++ b/src/assets/scss/object/project/_addons.scss
@@ -129,7 +129,8 @@
 		p:nth-child(2) {
 			font-size: 23px;
 			letter-spacing: 2px;
-			line-height: 37px;
+			line-height: 1;
+			padding-top: 15px;
 			font-family: yu-mincho-pr6n, sans-serif;
 
 			@include is-sp {
@@ -625,7 +626,7 @@
 			display: flex;
 			align-items: center;
 			justify-content: space-around;
-			padding: 12px;	
+			padding: 12px;
 
 			@include is-sp {
 				width: 250px;
@@ -661,7 +662,7 @@
 			}
 		}
 		.info_2 {
-			background-color: #F60000;
+			background-color: #f60000;
 			margin: 0 0 0 10px;
 			@include is-sp {
 				margin: 25px 0 0 0;
